feat: Add ts addtocartpage and test specs; update fixtures and new page object cartpage

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://practicesoftwaretesting.com/
+BASE_URL=https://practicesoftwaretesting.com/account
 PRODUCT_URL=https://practicesoftwaretesting.com/account
