--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BASE_URL=https://practicesoftwaretesting.com/account
 PRODUCT_URL=https://practicesoftwaretesting.com/account
+LOGIN_URL=https://practicesoftwaretesting.com/auth/login
