new feature: Automate ContactformPage

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BASE_URL=https://practicesoftwaretesting.com/account
 PRODUCT_URL=https://practicesoftwaretesting.com/account
 LOGIN_URL=https://practicesoftwaretesting.com/auth/login
+CONTACT_URL=https://practicesoftwaretesting.com/contact
